tests/miniJava/neg/004415_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] extends java ( ) { return 0 ; } }
